terrible hotfix to bug of containers with horizontal scrollbars.. will figure out reason for bug later hopefully

--- a/css/main.scss
+++ b/css/main.scss
@@ -14,3 +14,8 @@
 @import "mycomponents/news";
 @import "mycomponents/contact";
 @import "mycomponents/footer";
+
+.row{
+	margin-right: 0px;
+	margin-left: 0px;
+}
